Add path npm. Make public folder, put js files. For SSE, use compression npm instead sse npm. SSE ping test complete.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div id="alertImg"><img /></div>
       <div id="alertMsg"></div>
     </div>
-    <script src="sseClient.js"></script>
-    <script src="eventAnimation.js"></script>
+    <script type="text/javascript" src="sseClient.js"></script>
+    <script type="text/javascript" src="eventAnimation.js"></script>
   </body>
 </html>
