Server send object data to client every 3000ms, trigger an alert animation on client during 2000ms. Need to make button to change animations(cctv/safe<->danger).

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Server Sent Event - Alert</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div id="alertPopUp">
-      <div id="alertImg"><img /></div>
+      <div id="alertImg"><img></div>
       <div id="alertMsg"></div>
     </div>
     <script type="text/javascript" src="sseClient.js"></script>
